eliminando referencias a chart

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
     <meta name="description" content="Accesibilidad y transparencia política para los plenos del Ayuntamiento de Zaragoza">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Roboto+Condensed|Playfair+Display" rel="stylesheet">
 </head>
 
 <body class="mih-100">
@@ -27,11 +28,14 @@
                 <img class="home-image" alt="una mano de un hombre ayuda a una mano de una mujer introducir un voto en una urna" src="img/stats.jpg" />
             </div>
             <div class="home-position-container-claim">
-                <span class="home-position-container-title">ESTADÍSTICAS ACUMULADAS</span> En algunas mociones se votan diferentes puntos, así que las <strong>estadísticas se han obtenido de la suma de todas las votaciones.</strong>
+                <span class="home-position-container-title">ESTADÍSTICAS ACUMULADAS</span> Esta serie de estadísticas se han hecho a partir de las mociones. En algunas mociones se votan diferentes puntos, así que las <strong>estadísticas se han obtenido de la suma de todas las votaciones.</strong>
             </div>
         </div>
     </div>
     </div>
+    <section class="home-cite-container">
+        <p class="home-cite"><span class="home-cite-quote">“</span>La información es poder. Pero como todo poder, hay quienes quieren mantenerlo para sí mismos. <span class="home-cite-aaron">Aaron Swartz | 1986 - 2013</span></p>
+    </section>
     <section id='scroll'>
         <div class='scroll__graphic'>
             <article class="chart-estadisticas">
@@ -58,7 +62,7 @@
             <div class='step' data-step='3'>
                 <div class="step-blanco">
                     <p class="title-estadisticas">¿Quién ha presentado más mociones?</p>
-                    <p>En el pleno del Ayuntamiento de Zaragoza <span class="font-w8">se han presentado 428 mociones, y se han retirado 39.</span></p>
+                    <p>En total <span class="font-w8">se han presentado 428 mociones, y se han retirado 39.</span></p>
                     <p> En primer lugar <span class="font-w8">PSOE</span> con <span class="font-w8">100</span>.</p>
                     <p> En segundo lugar el <span class="font-w8">C'S</span> con <span class="font-w8">100</span>.</p>
                     <p> En tercer lugar el <span class="font-w8">PP</span> con <span class="font-w8">97</span>.</p>
