--- a/psoe.html
+++ b/psoe.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="js/tipuesearch_content.js"></script>
     <script type="text/javascript" src="js/tipuesearch_set.js"></script>
     <script type="text/javascript" src="js/tipuesearch.min.js"></script>
-    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="js/d3.min4.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|IBM+Plex+Sans:400,600|Roboto+Condensed" rel="stylesheet">
@@ -41,6 +41,7 @@
     <section class="partidos-cabecera">
         <h3 class="partidos-cabecera-title">PARTIDO SOCIALISTA OBRERO ESPAÑOL</h3>
         <div class="partidos-cabecera-izda">
+            <h2 class="partidos-cabecera-subtitle">Lista de concejales</h2>
             <a class="partido-concejales-lista-elemento" target="_blank" href="http://www.zaragoza.es/ciudad/organizacion/perez-anadon.htm">
                 <svg class="concejales-icon" width="43" height="75" viewBox="0 0 43 75" xmlns="http://www.w3.org/2000/svg">
                     <path d="M42 32.7h-5.7c-.3-5.8-4-10-9.8-11.5 2.6-1.6 4.3-4.4 4.3-7.7v-1.2c0-1.2-.2-2.4-.6-3.4 1.3-1 2-2.8 2.2-5 0-1.4 0-3-1-3.4-.5-.2-1 0-1.2.4-.6.6-2.5.2-4.4-.2-2-.5-4.6-1-6.8-.6-5 1-6 5.3-5.7 7.2-.8 1.5-1.2 3-1.2 4.8v1c0 3.5 2 6.3 4.4 8-5.8 1.6-9.6 5.7-9.8 11.5H1c-.6 0-1 .3-1 1V38c0 .6.4 1 1 1h3v35c0 .4.3.8 1 .8h33c.6 0 1-.4 1-1V39.3h3c.6 0 1-.4 1-1v-4.6c0-.6-.4-1-1-1zM19.4 2c2-.3 4 0 6 .6 2 .5 3.8 1 5.2.4 0 .8 0 2-.5 3.2 0 .5-.4.8-.6 1C27.8 5 25 3.6 22 3.6h-1.2c-2 0-4 .7-5.5 2 .3-1.4 1.4-3 4-3.4zM21 20.7c-4 0-7-3.2-7-7v-1.3c0-3.8 3-7 7-7h1c4 0 7 3 7 7v1.2c0 3.8-3 7-7 7h-1zm.5 2c6.3 0 12.6 3 13 10h-12v-2.4c.4-.3.8-.8.8-1.5v-2.4c0-1-.7-1.8-1.8-1.8-1 0-1.8.7-1.8 1.8v2.4c0 .7.4 1 1 1.5v2.5H8.3c.5-7.2 6.8-10.2 13-10.2zM37 73H6v-34h31v34zm4-36H2v-2.6h39v2.7z" fill="#000" />
@@ -160,7 +161,8 @@
         </div>
     </footer>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.12.0/mapbox-gl.js'></script>
-    <script type="text/javascript" src="../js/mapa-psoe.js"></script>
+    <script type="text/javascript" src="js/scrollama.min.js"></script>
+    <script type="text/javascript" src="js/mapa-psoe.js"></script>
     <script>
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
