--- a/cha.html
+++ b/cha.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -61,13 +60,13 @@
         <section class="graficas-cha graficas-partido">
         </section>
     </section>
-    <section class="mapa-container mapa-container-cha">
-        <div id="map-wrap">
-            <div id="map">
-                <span class="tooltip-title">CHUNTA ARAGONESISTA 1987-2015</span>
-            </div>
-        </div>
-    </section>
+    <article class="grafica-favor-legislatura">
+        <h3 class="partidos-grafico-titulo">Distribución del voto a favor de Chunta</h3>
+        <p class="partidos-grafico-parrafo">Cada círculo representa un partido y cúantas veces ha votado Chunta a favor a lo largo de la legislatura.</p>
+        <svg>
+            <g class="grafica-favor-legislatura-container"></g>
+        </svg>
+    </article>
     <section id='scroll'>
         <div class='scroll__graphic'>
             <article class="chart-estadisticas">
@@ -115,10 +114,10 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO EN CONTRA
                     </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Chunta Aragonesista</strong> ha votado en contra del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado en contra del <strong>PP</strong> en 46 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado en contra de <strong>ZEC</strong> en 1 ocasión.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado en contra del <strong>PSOE</strong> en 9 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado en contra de <strong>Ciudadanos</strong> en 13 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PP</strong> en 46 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>ZEC</strong> en 1 ocasión.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra del <strong>PSOE</strong> en 9 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">En contra de <strong>Ciudadanos</strong> en 13 ocasiones.</p>
                 </div>
             </div>
             <div class='step' data-step='5'>
@@ -126,11 +125,18 @@
                     <h2 class="partidos-grafico-titulo">VOTANDO A FAVOR
                 </h2>
                     <p class="partidos-grafico-parrafo maw-50">En la siguiente gráfica podemos ver el número de veces que <strong>Chunta Aragonesista</strong> votado a favor del resto de partidos.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado a favor del <strong>PP</strong> en 15 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado a favor de <strong>ZEC</strong> en 48 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado a favor del <strong>PSOE</strong> en 51 ocasiones.</p>
-                    <p class="partidos-grafico-parrafo maw-50">Ha votado a favor de <strong>Ciudadanos</strong> en 16 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PP</strong> en 15 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>ZEC</strong> en 48 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor del <strong>PSOE</strong> en 51 ocasiones.</p>
+                    <p class="partidos-grafico-parrafo maw-50">A favor de <strong>Ciudadanos</strong> en 16 ocasiones.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="mapa-container mapa-container-cha">
+        <div id="map-wrap">
+            <div id="map">
+                <span class="tooltip-title">CHUNTA ARAGONESISTA 1987-2015</span>
             </div>
         </div>
     </section>
